feat: 정렬 조건 추가
- LATEST, OLDEST

FDORA-32